--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,10 +1,6 @@
-.Footer .signature-link {
-  color: #fff;
-  text-decoration: none;
-  padding-right: 4px;
-}
-
-.Footer .signature-link:hover {
-  color: #000;
-  text-decoration: underline;
+.Footer .caption a {
+  color: var(--main-text-color);
+  line-height: 1;
+  font-size: 13px;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
