--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,17 @@
 :root {
   --bkg-forecast: linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.6) 75%,
     rgba(240, 238, 238, 0) 100%
   );
+  --text-shadow: #000 0 0 10px;
+  --main-text-color: #fff;
+  --border-color: 1px solid rgba(0, 0, 0, 0.8);
+  --main-background-color: rgba(0, 0, 0, 0.5);
+  --filter-drop-shadow: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
 }
 
 .App {
-  font-family: sans-serif;
-  text-align: center;
-  color: #fff;
-}
-
-.App section {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-}
-
-.App section .container {
-  position: relative;
-  display: block;
-  max-width: 100%;
-  border: 1px solid transparent;
-  padding: 0;
-}
-
-.App h1 {
-  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
-  text-shadow: #000 0 0 10px;
-  text-rendering: optimizeLegibility;
-}
-
-.App h1 a {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 200;
-  text-decoration: none;
-}
-
-.App h1 a:hover {
-  text-decoration: underline;
-  font-weight: 200;
-  color: #fff;
-}
-
-.App p {
-  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
-}
-
-.App ul {
-  margin: 0;
-  padding: 0;
-}
-
-.App li {
-  list-style: none;
-  color: #fff;
-  line-height: 19px;
+  margin: 0 auto;
+  max-width: 960px;
 }
