--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -78,7 +78,7 @@
 
 .Weather .form-control:focus {
   color: var(--main-text-color);
-  border: 1px solid #fff !important;
+  border: 1px solid var(--main-text-color) !important;
   background-color: var(--main-background-color);
   outline: 0;
   box-shadow: none;
@@ -105,7 +105,7 @@
 
 .Weather .btn-search:hover {
   border: var(--border-color);
-  background-color: #fff;
+  background-color: var(--main-text-color);
   color: #000;
 }
 
@@ -118,6 +118,6 @@
 
 .Weather .btn-location:hover {
   border: var(--border-color);
-  background-color: #fff;
+  background-color: var(--main-text-color);
   color: #000;
 }
