Add new background images, update design

--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -36,7 +36,8 @@
 
 .Weather .units {
   position: relative;
-  top: -28px;
+  top: -32px;
+  font-size: 14px;
   filter: var(--filter-drop-shadow);
   text-shadow: var(--text-shadow);
 }
