--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,6 @@ body {
   font-weight: 300;
   background-image: url("https://images7.alphacoders.com/577/577962.jpg");
   background-repeat: no-repeat;
+  background-position: center top;
   background-size: cover;
 }
